additions following video lectures

--- a/1st_9April2021/TravellingSalesman.ipynb
+++ b/1st_9April2021/TravellingSalesman.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "![tsp.png](attachment:tsp.png)\n",
     "\n",
-    "__Q:__ What is the number of all possible paths that start from and go back to a given city?\n",
+    "__Q:__ What is the number of all possible paths that start from and go back to a given city? (n-1)!\n",
     "\n",
     "#### Dynamic programming approach\n",
     "\n",
@@ -51,7 +51,7 @@
     "    \\mathcal{A}_s = A\n",
     "$$\n",
     "\n",
-    "__Q:__ Why is $s=(k)$ not enough?\n",
+    "__Q:__ Why is $s=(k)$ not enough? If I define s := (k) , in order to know where to go, I should also know the history of the process, but that's not markovian.\n",
     "\n",
     "The Markov dynamics is deterministic\n",
     "\n",
@@ -65,7 +65,8 @@
     "\n",
     "\n",
     "\n",
-    "__Q:__ how much memory is required? How many states are there for $N$ cities? "
+    "__Q:__ how much memory is required? How many states are there for $N$ cities? \n",
+    "For each state, a city is either visited or not. So, if in a state, there are 2^(N-1) possibilities (2 for each city: visited or not), those possibilities represents 2^(N-1) different states. However due to different possibile combination 2^(N-1) represents a lower bound. However number of state is much lower than N^N"
    ]
   },
   {
@@ -76,11 +77,11 @@
     "\n",
     "Dynamic programming finds the optimal path in the set of states $\\mathcal{S}$, starting from the state $(1,\\{2,\\ldots N\\})$ (only the origin is visited), and terminating in unique absorbing state (back to the origin, all city visited). \n",
     "\n",
-    "__Q:__ Is the starting state special? Why?\n",
+    "__Q:__ Is the starting state special? Why? No, because the process is cyclic.\n",
     "\n",
     "From the computation of the optimal path in $\\mathcal{S}$ one then trivially derives the path in the set of cities.\n",
     "\n",
-    "The idea of dynamic programming is to associate a *cost function* $C_\\pi$ to each state in $\\mathcal{S}$ that is the *the accumulated cost from that state to the end of the task, following the policy $\\pi$*:\n",
+    "The idea of dynamic programming is to associate a *cost function* $C_\\pi$ to each state in $\\mathcal{S}$ that is the *the accumulated cost (distances in this case) from that state to the end of the task, following the policy $\\pi$*:\n",
     "\n",
     "$$\n",
     "    C_\\pi(s) = \\mathbb{E}_\\pi\\bigg[\\sum_{t=0}^T d_{k_t, k_{t+1}} \\, \\bigg| \\, s_0 = s \\bigg]\n",
@@ -167,7 +168,7 @@
    "source": [
     "def build_states(N_cities):\n",
     "    \"\"\"\n",
-    "    Builds the state space as a list of lists, where the first index runs \n",
+    "    Builds the state space (all possible states) as a list of lists, where the first index runs \n",
     "    over the number of visited cities, and the second contains the state\n",
     "    in the form: \"(current_city, (city_to_visit_1, city_to_visit_2, ...))\"\n",
     "    \"\"\"\n",
@@ -225,6 +226,8 @@
     "    \n",
     "    return Ds\n",
     "\n",
+    "# Why allowing distances between different cities to be 0? Should that be avoided?\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -253,9 +256,9 @@
     "    # Building the state space\n",
     "    states = build_states(N_cities)\n",
     "    \n",
-    "    # Imposing the boundary conditions\n",
+    "    # Imposing the boundary conditions: for all the states which have no city yet to visit, the cost amounts to that of returning home.\n",
     "    for s in states[N_cities-1]:\n",
-    "        costs[s] = dist_mat[s[0]][0]\n",
+    "        costs[s] = dist_mat[s[0]][0] \n",
     "        best_path_d[s] = 0\n",
     "    \n",
     "    # Cycling over the number of visited cities (inverse order)\n",
