--- a/5th_7May2021/CartPole_Environment.ipynb
+++ b/5th_7May2021/CartPole_Environment.ipynb
@@ -96,6 +96,7 @@
    "metadata": {},
    "source": [
     "### State space\n",
+    "We're dealing with a continuous state space.\n",
     "The state space is a Box(4) object, which is a 4-dimensional vector of floats.\n",
     "Each dimension can be bounded, and represents the following observables:"
    ]
@@ -135,7 +136,8 @@
    "source": [
     "### Action space\n",
     "The action space is a discrete space of size two.\n",
-    "The two actions are applying a certain fixed force to the cart towards left or right"
+    "The two actions are applying a certain fixed force to the cart towards left or right.\n",
+    "(to be treated in a tabular way.)"
    ]
   },
   {
